Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2269

hello world plugin cannot be built

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 2.1.0
    • None
    • All Other Issues
    • None
    • Ubuntu 10.04/x64 + Qt 4.7.0rc (qmake) + qt-creator from git (master)

      When activating the hello world plugin in src/plugins/plugins.pro and doing a "qmake -recursive plugins.pro && make -j3", the following error occurs:

      make[1]: Leaving directory `/home/torti/src/Qt/qt-creator/src/plugins/qmljsinspector'
      /home/torti/opt/qt/qt/bin/moc -DIDE_LIBRARY_BASENAME=\"lib\" -DQT_NO_CAST_TO_ASCII -DQT_USE_FAST_OPERATOR_PLUS -DQT_USE_FAST_CONCATENATION -DQT_NO_DEBUG -DQT_PLUGIN -DQT_GUI_LIB -DQT_CORE_LIB -DQT_SHARED -I/home/torti/opt/qt/qt/mkspecs/linux-g++-64 -I. -I/home/torti/opt/qt/qt/include/QtCore -I/home/torti/opt/qt/qt/include/QtGui -I/home/torti/opt/qt/qt/include -I../../libs -I/home/torti/src/Qt/qt-creator/tools -I../../plugins -I../../libs/3rdparty/botan/build -I.moc/release-shared helloworldplugin.h -o .moc/release-shared/moc_helloworldplugin.cpp
      /home/torti/opt/qt/qt/bin/moc -DIDE_LIBRARY_BASENAME=\"lib\" -DQT_NO_CAST_TO_ASCII -DQT_USE_FAST_OPERATOR_PLUS -DQT_USE_FAST_CONCATENATION -DQT_NO_DEBUG -DQT_PLUGIN -DQT_GUI_LIB -DQT_CORE_LIB -DQT_SHARED -I/home/torti/opt/qt/qt/mkspecs/linux-g++-64 -I. -I/home/torti/opt/qt/qt/include/QtCore -I/home/torti/opt/qt/qt/include/QtGui -I/home/torti/opt/qt/qt/include -I../../libs -I/home/torti/src/Qt/qt-creator/tools -I../../plugins -I../../libs/3rdparty/botan/build -I.moc/release-shared helloworldwindow.h -o .moc/release-shared/moc_helloworldwindow.cpp
      g++ -c -m64 -pipe -O2 -fvisibility=hidden -fvisibility-inlines-hidden -Wall -W -D_REENTRANT -fPIC -DIDE_LIBRARY_BASENAME=\"lib\" -DQT_NO_CAST_TO_ASCII -DQT_USE_FAST_OPERATOR_PLUS -DQT_USE_FAST_CONCATENATION -DQT_NO_DEBUG -DQT_PLUGIN -DQT_GUI_LIB -DQT_CORE_LIB -DQT_SHARED -I/home/torti/opt/qt/qt/mkspecs/linux-g++-64 -I. -I/home/torti/opt/qt/qt/include/QtCore -I/home/torti/opt/qt/qt/include/QtGui -I/home/torti/opt/qt/qt/include -I../../libs -I/home/torti/src/Qt/qt-creator/tools -I../../plugins -I../../libs/3rdparty/botan/build -I.moc/release-shared -o .obj/release-shared/moc_helloworldplugin.o .moc/release-shared/moc_helloworldplugin.cpp
      helloworldplugin.cpp: In member function 'virtual bool HelloWorld::Internal::HelloWorldPlugin::initialize(const QStringList&, QString*)':
      helloworldplugin.cpp:92: error: no matching function for call to 'Core::ActionManager::registerAction(QAction*&, const char [28], QList<int>&)'
      ../../plugins/coreplugin/actionmanager/actionmanager.h:60: note: candidates are: virtual Core::Command* Core::ActionManager::registerAction(QAction*, const QString&, const Core::Context&)
      helloworldplugin.cpp:97: error: invalid use of incomplete type 'struct Core::ActionContainer'
      ../../plugins/coreplugin/actionmanager/actionmanager.h:46: error: forward declaration of 'struct Core::ActionContainer'
      helloworldplugin.cpp:102: error: invalid use of incomplete type 'struct Core::ActionContainer'
      ../../plugins/coreplugin/actionmanager/actionmanager.h:46: error: forward declaration of 'struct Core::ActionContainer'
      helloworldplugin.cpp:107: error: invalid use of incomplete type 'struct Core::ActionContainer'
      ../../plugins/coreplugin/actionmanager/actionmanager.h:46: error: forward declaration of 'struct Core::ActionContainer'
      helloworldplugin.cpp:117: error: no matching function for call to 'Core::BaseMode::setContext(QList<int>&)'
      ../../plugins/coreplugin/basemode.h:70: note: candidates are: void Core::BaseMode::setContext(const Core::Context&)
      make[1]: *** [.obj/release-shared/helloworldplugin.o] Error 1
      make[1]: *** Waiting for unfinished jobs....
      make[1]: Leaving directory `/home/torti/src/Qt/qt-creator/src/plugins/helloworld'
      make: *** [sub-helloworld-make_default] Error 2
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dt Daniel Teske
            thorstenhirsch Thorsten Hirsch
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes