Make HelloWorld plugin always compile, mark as experimental

Task-Nr: QTCREATORBUG-2269